<resources>
    <string name="app_name">Openjitsu</string>
    <string name="title_move_list">Moves</string>
    <string name="title_move_detail">Move Detail</string>
    <string name="title_activity_login">Sign in</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_position_list">Positions</string>
    <string name="title_position_detail">Position Detail</string>
    <string name="title_explore_list">Explore</string>
    <string name="title_explore_detail">Explore Detail</string>
    <string name="any_email">Email address</string>
    <string name="any_password">Password</string>
    <string name="login_loginbutton">Log in</string>
    <string name="login_registerbutton">Sign up</string>
    <string name="any_username">Username</string>
    <string name="register_desiredusername">Desired username</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="register_registerbutton">Register</string>
    <string name="exploredetail_overview">Overview</string>
    <string name="exploredetail_bannerdescription">Position banner image</string>
    <string name="menu_explore">Explore</string>
    <string name="menu_profile">Profile</string>
    <string name="appbar_bottom_sheet_behavior">com.google.android.material.bottomsheet.BottomSheetBehavior</string>
    <string name="menu_search">Search</string>
    <string name="search_hint">Enter a name or category</string>
    <string name="register_show_login_button">Existing</string>
</resources>
